ADD CREATE service spec form

--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -44,5 +44,8 @@
         @if(show_create_prod_spec){
           <create-product-spec></create-product-spec>
         }
+        @if(show_create_serv_spec){
+          <create-service-spec></create-service-spec>
+        }
     </div>
 </div>
