--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -47,5 +47,8 @@
         @if(show_create_serv_spec){
           <create-service-spec></create-service-spec>
         }
+        @if(show_create_res_spec){
+          <create-resource-spec></create-resource-spec>
+        }
     </div>
 </div>
