--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/create-service-spec/create-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/create-service-spec/create-service-spec.component.html
@@ -9,7 +9,7 @@
                 <svg class="w-3 h-3 mr-2 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 12 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M5 1 1 5l4 4m6-8L7 5l4 4"/>
                 </svg>
-                {{ 'PRODUCT_DETAILS._back' | translate }}
+                {{ 'CREATE_SERV_SPEC._back' | translate }}
                 </button>
             </li>
             <li aria-current="page">
@@ -17,7 +17,7 @@
                 <svg class="rtl:rotate-180  w-3 h-3 mx-1 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                 </svg>
-                <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 ">Create service specification</span>
+                <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 ">{{ 'CREATE_SERV_SPEC._create' | translate }}</span>
                 </div>
             </li>
             </ol>
@@ -26,18 +26,18 @@
   <!-- End Breadcrumb -->
 
   <div class="bg-secondary-50 dark:bg-white mt-4 p-8 rounded-lg">
-    <h2 class="text-3xl font-bold text-primary-100 ml-4">New service</h2>
+    <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'CREATE_SERV_SPEC._new' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
     <div class="grid grid-cols-20/80">
         <div class="flex flex-col mr-4">
-            <h2 class="text-xl font-bold text-black mb-4">Steps</h2>
+            <h2 class="text-xl font-bold text-black mb-4">{{ 'CREATE_SERV_SPEC._steps' | translate }}</h2>
             <button id="general-info" (click)="toggleGeneral()" [disabled]="!generalDone"  class="grid grid-cols-20/80 mb-2 text-primary-100">
                 <span id="general-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-primary-100 rounded-full shrink-0">
                     1
                 </span>
                 <span>
-                    <h3 class="flex leading-tight justify-start">General</h3>
-                    <p class="flex text-xs justify-start">Service's general information</p>
+                    <h3 class="flex leading-tight justify-start">{{ 'CREATE_SERV_SPEC._general' | translate }}</h3>
+                    <p class="flex text-xs justify-start">{{ 'CREATE_SERV_SPEC._general_info' | translate }}</p>
                 </span>
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
@@ -46,21 +46,21 @@
                     2
                 </span>
                 <span>
-                    <h3 class="flex leading-tight justify-start">Characteristics</h3>
-                    <p class="flex text-xs justify-start">Services's characteristics</p>
+                    <h3 class="flex leading-tight justify-start">{{ 'CREATE_SERV_SPEC._chars' | translate }}</h3>
+                    <p class="flex text-xs justify-start">{{ 'CREATE_SERV_SPEC._chars_info' | translate }}</p>
                 </span>
             </button>
         </div>
         <div>
             @if(showGeneral){
-                <h2 class="text-3xl font-bold text-primary-100 ml-4">General</h2>
+                <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'CREATE_SERV_SPEC._general' | translate }}</h2>
                     <form class="m-4 gap-4" [formGroup]="generalForm">
-                        <label for="prod-name" class="font-bold text-lg">{{ 'PROFILE._name' | translate }}</label>
+                        <label for="prod-name" class="font-bold text-lg">{{ 'CREATE_SERV_SPEC._name' | translate }}</label>
                         <input formControlName="name" type="text" id="prod-name"
                         [ngClass]="generalForm.get('name')?.invalid == true && generalForm.value.name!='' ? 'border-red-600' : 'border-gray-300'"
                         class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                         
-                        <label for="prod-name" class="font-bold text-lg">Description</label>
+                        <label for="prod-name" class="font-bold text-lg">{{ 'CREATE_SERV_SPEC._description' | translate }}</label>
                         <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50">
                             <div class="flex items-center justify-between px-3 py-2 border-b">
                                 <div class="flex flex-wrap items-center divide-gray-200 sm:divide-x sm:rtl:divide-x-reverse">
@@ -133,10 +133,10 @@
                                         <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
                                       </svg>
                                       
-                                    <span class="sr-only">Preview</span>
+                                    <span class="sr-only">{{ 'CREATE_SERV_SPEC._preview' | translate }}</span>
                                 </button>
                                 <div id="tooltip-fullscreen" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
-                                    Show preview
+                                    {{ 'CREATE_SERV_SPEC._show_preview' | translate }}
                                     <div class="tooltip-arrow" data-popper-arrow></div>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
                     </form>
                     <div class="flex w-full justify-items-end justify-end">
                         <button type="button" (click)="toggleChars();generalDone=true;" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
-                            Next
+                            {{ 'CREATE_SERV_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
@@ -166,7 +166,7 @@
                     </div>
             }
             @if(showChars){
-                <h2 class="text-3xl font-bold text-primary-100 ml-4">Characteristics</h2>
+                <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'CREATE_SERV_SPEC._chars' | translate }}</h2>
                 @if (prodChars.length === 0){
                     <div class="flex justify-center w-full m-4">
                       <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50" role="alert">
@@ -175,7 +175,7 @@
                         </svg>
                         <span class="sr-only">Info</span>
                         <div>
-                            No characteristic included.
+                            {{ 'CREATE_SERV_SPEC._no_chars' | translate }}
                         </div>
                       </div>
                     </div>
@@ -185,16 +185,16 @@
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100">
                                 <tr>
                                     <th scope="col" class="px-6 py-3">
-                                        Name
+                                        {{ 'CREATE_SERV_SPEC._name' | translate }}
                                     </th>
                                     <th scope="col" class="px-6 py-3">
-                                        Description
+                                        {{ 'CREATE_SERV_SPEC._description' | translate }}
                                     </th>
                                     <th scope="col" class="px-6 py-3">
-                                        Values
+                                        {{ 'CREATE_SERV_SPEC._values' | translate }}
                                     </th>
                                     <th scope="col" class="px-6 py-3">
-                                        Actions
+                                        {{ 'CREATE_SERV_SPEC._actions' | translate }}
                                     </th>
                                 </tr>
                             </thead>
@@ -232,7 +232,7 @@
                 @if(showCreateChar==false){
                     <div class="flex w-full justify-items-center justify-center">
                         <button type="button" (click)="showCreateChar=!showCreateChar" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
-                            Create new characteristic
+                            {{ 'CREATE_SERV_SPEC._new_char' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
                             </svg>                                  
@@ -246,7 +246,7 @@
                             
                         </div>
                         <div>
-                            <label class="font-bold text-lg">Type</label>
+                            <label class="font-bold text-lg">{{ 'CREATE_SERV_SPEC._type' | translate }}</label>
                             <select id="type" (change)="onTypeChange($event)" class="shadow bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option selected value="string">String</option>
                                 <option value="number">Number</option>
@@ -254,7 +254,7 @@
                             </select>
                         </div>
                         <div class="col-span-2">
-                            <label for="description" class="font-bold text-lg">Description</label>
+                            <label for="description" class="font-bold text-lg">{{ 'CREATE_SERV_SPEC._description' | translate }}</label>
                             <textarea id="description" formControlName="description" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
                         </div>                        
                     </form>
@@ -293,7 +293,7 @@
                                 }
                             </div>
                         }
-                        <label for="values" class="font-bold text-lg">Add values</label>
+                        <label for="values" class="font-bold text-lg">{{ 'CREATE_SERV_SPEC._add_values' | translate }}</label>
                         @if(stringCharSelected){
                             <div class="flex flex-row items-center align-items-middle">
                                 <input #stringValue type="text" id="value" class="mr-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
@@ -307,13 +307,13 @@
                             <div class="flex flex-row items-center align-items-middle">
                                 <div class="flex w-full">
                                     <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border rounded-e-0 border-gray-300 border-e-0 rounded-s-md">
-                                        Value
+                                        {{ 'CREATE_SERV_SPEC._value' | translate }}
                                     </span>
                                     <input #numberValue type="number" pattern="[0-9]*" id="value" class="mr-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                 </div>
                                 <div class="flex w-full">
                                     <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border rounded-e-0 border-gray-300 border-e-0 rounded-s-md">
-                                        Unit
+                                        {{ 'CREATE_SERV_SPEC._unit' | translate }}
                                     </span>
                                     <input #numberUnit type="text" id="value" class="mr-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                 </div>                           
@@ -328,19 +328,19 @@
                             <div class="flex flex-row items-center align-items-middle">
                                 <div class="flex w-full">
                                     <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border rounded-e-0 border-gray-300 border-e-0 rounded-s-md">
-                                        From
+                                        {{ 'CREATE_SERV_SPEC._from' | translate }}
                                     </span>
                                     <input #fromValue type="number" pattern="[0-9]*" id="value" class="mr-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                 </div>
                                 <div class="flex w-full">
                                     <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border rounded-e-0 border-gray-300 border-e-0 rounded-s-md">
-                                        To
+                                        {{ 'CREATE_SERV_SPEC._to' | translate }}
                                     </span>
                                     <input #toValue type="number" pattern="[0-9]*" id="value" class="mr-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                 </div>
                                 <div class="flex w-full">
                                     <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border rounded-e-0 border-gray-300 border-e-0 rounded-s-md">
-                                        Unit
+                                        {{ 'CREATE_SERV_SPEC._unit' | translate }}
                                     </span>
                                     <input #rangeUnit type="text" id="value" class="mr-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                 </div>
@@ -353,7 +353,7 @@
                         }
                         <div class="flex w-full justify-items-center justify-center mt-4">
                             <button type="button" (click)="saveChar()"  [disabled]="!charsForm.valid || creatingChars.length==0" [ngClass]="!charsForm.valid || creatingChars.length==0 ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
-                                Save characteristic
+                                {{ 'CREATE_SERV_SPEC._save_char' | translate }}
                                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M11 16h2m6.707-9.293-2.414-2.414A1 1 0 0 0 16.586 4H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V7.414a1 1 0 0 0-.293-.707ZM16 20v-6a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v6h8ZM9 4h6v3a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1V4Z"/>
                                 </svg>                                                                   
@@ -364,7 +364,7 @@
                 }
                 <div class="flex w-full justify-items-end justify-end ml-4">
                     <button type="button" (click)="showFinish();charsDone=true;" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
-                        Finish
+                        {{ 'CREATE_SERV_SPEC._finish' | translate }}
                         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                         </svg>
