--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -221,12 +221,20 @@
                                         @if (val?.isDefault == true) {
                                             <div class="flex items-center pl-4">
                                                 <input disabled checked id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 focus:ring-2">
-                                                <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{val.value}}</label>
+                                                @if(val.value){
+                                                    <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{val.value}} {{val.unitOfMeasure}}</label>
+                                                } @else {
+                                                    <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{val.valueFrom}} - {{val.valueTo}} {{val?.unitOfMeasure}}</label>
+                                                }
                                             </div>
                                         } @else {
                                             <div class="flex items-center pl-4">
                                                 <input disabled id="disabled-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 focus:ring-2">
-                                                <label for="disabled-checkbox" class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{val.value}}</label>
+                                                @if(val.value){
+                                                    <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{val.value}} {{val.unitOfMeasure}}</label>
+                                                } @else {
+                                                    <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{val.valueFrom}} - {{val.valueTo}} {{val?.unitOfMeasure}}</label>
+                                                }
                                             </div>
                                         }
                                     }
@@ -252,10 +260,32 @@
         }
 
         @if(attatchments.length>0){ 
-        <h2 #attachContent class="text-4xl font-extrabold text-primary-100 text-center pb-8 pt-12">Product attachments</h2>                   
-            @for (att of attatchments; track att.id) {
-                <p class="mb-2 font-normal pl-4 text-gray-700">{{att.name}}: {{att.description}}</p>
-            }
+        <h2 #attachContent class="text-4xl font-extrabold text-primary-100 text-center pb-8 pt-12">Product attachments</h2>
+        <div class="container mx-auto px-4">
+            <div class="flex flex-wrap -mx-4">
+                @for (att of attatchments; track att.id) {
+                    <div class="w-1/3 px-4 mb-8">                
+                        <div class="border border-gray-200 rounded-lg shadow bg-white shadow-md p-8 h-full">
+                            <h3 class="text-2xl font-bold mb-4">{{att.name}}</h3>
+                            <label class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all">{{att.url}}</label>
+                        </div>
+                    </div>
+                } @empty {
+                    <div class="flex justify-center items-center w-full">
+                        <div class="flex items-center w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md" role="alert">
+                          <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                          </svg>
+                          <span class="sr-only">Info</span>
+                          <p class="text-center">
+                            {{ 'PRODUCT_DETAILS._no_attach' | translate }}
+                          </p>
+                        </div>
+                      </div>                    
+                }
+            </div>
+        </div>                
+
         }
 
         <div #agreementsContent>
