--- a/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
@@ -50,6 +50,16 @@
                     <p class="flex text-xs justify-start">{{ 'CREATE_RES_SPEC._chars_info' | translate }}</p>
                 </span>
             </button>
+            <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
+            <button id="summary" [disabled]="true" class="grid grid-cols-20/80 mb-2">
+                <span id="summary-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-gray-400 rounded-full shrink-0">
+                    3
+                </span>
+                <span>
+                    <h3 class="flex leading-tight justify-start">{{ 'CREATE_PROD_SPEC._finish' | translate }}</h3>
+                    <p class="flex text-xs justify-start">{{ 'CREATE_PROD_SPEC._summary' | translate }}</p>
+                </span>
+            </button>
         </div>
         <div>
             @if(showGeneral){
@@ -185,7 +195,7 @@
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100">
                                 <tr>
                                     <th scope="col" class="px-6 py-3">
-                                        {{ 'CREATE_RES_SPEC.name' | translate }}
+                                        {{ 'CREATE_RES_SPEC._name' | translate }}
                                     </th>
                                     <th scope="col" class="px-6 py-3">
                                         {{ 'CREATE_RES_SPEC._description' | translate }}
@@ -216,12 +226,12 @@
                                                 }                                                
                                             }                                   
                                         </td>
-                                        <td class="px-6 py-4">                                        
-                                            <button type="button" (click)="deleteChar(prod)" class="text-white bg-red-600 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
-                                                <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <td class="px-6 py-4">
+                                            <button (click)="deleteChar(prod)" class="font-bold text-white bg-red-500 rounded-3xl">
+                                                <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/>
-                                                </svg>                                                                                                
-                                            </button>                                              
+                                                </svg>                                  
+                                            </button>    
                                         </td>
                                     </tr>
                                 }
@@ -369,6 +379,87 @@
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                         </svg>
                     </button>
+                </div>
+            }
+
+            @if(showSummary){
+                <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'CREATE_PROD_SPEC._finish' | translate }}</h2>
+                <div class="m-8">
+                    <div>
+                        <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._product_name' | translate }}</label>
+                        <label class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            {{resourceToCreate?.name}}
+                        </label>
+                    </div>
+                    
+                    <div class="mb-4">
+                        <label class="font-bold text-lg mr-4">{{ 'CREATE_PROD_SPEC._status' | translate }}</label>
+                        @if(resourceToCreate?.lifecycleStatus == 'Active'){
+                            <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{resourceToCreate?.lifecycleStatus}}</span>
+                        } @else if(resourceToCreate?.lifecycleStatus == 'Launched') {
+                            <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{resourceToCreate?.lifecycleStatus}}</span>
+                        } @else if(resourceToCreate?.lifecycleStatus == 'Retired') {
+                            <span class="bg-blue-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{resourceToCreate?.lifecycleStatus}}</span>
+                        } @else if(resourceToCreate?.lifecycleStatus == 'Obsolete') {
+                            <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{resourceToCreate?.lifecycleStatus}}</span>
+                        }
+                    </div>
+
+                    <div class="py-2 bg-white rounded-b-lg">
+                        <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._product_description' | translate }}</label>
+                        <markdown [data]="resourceToCreate?.description"></markdown>
+                    </div>
+                    
+                    @if(prodChars.length>0){
+                        <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._chars' | translate }}</label>
+                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
+                            <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+                                <thead class="text-xs text-gray-700 uppercase bg-gray-100">
+                                    <tr>
+                                        <th scope="col" class="px-6 py-3">
+                                            {{ 'CREATE_PROD_SPEC._product_name' | translate }}
+                                        </th>
+                                        <th scope="col" class="px-6 py-3">
+                                            {{ 'CREATE_PROD_SPEC._product_description' | translate }}
+                                        </th>
+                                        <th scope="col" class="px-6 py-3">
+                                            {{ 'CREATE_PROD_SPEC._values' | translate }}
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @for (prod of resourceToCreate?.resourceSpecCharacteristic; track prod;) {
+                                        <tr class="border-b hover:bg-gray-200">
+                                            <td class="px-6 py-4">
+                                                {{prod.name}}
+                                            </td>
+                                            <td class="px-6 py-4">
+                                                {{prod.description}}                                       
+                                            </td>
+                                            <td class="px-6 py-4">
+                                                @for (char of prod.resourceSpecCharacteristicValue; track char;) {
+                                                    @if(char.value){
+                                                        {{char.value}} {{char?.unitOfMeasure}},
+                                                    } @else {
+                                                        {{char.valueFrom}} - {{char.valueTo}} {{char?.unitOfMeasure}},
+                                                    }                                                
+                                                }                                   
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    }
+                    <div class="flex w-full justify-items-end justify-end ml-4">
+                        <button type="button" (click)="createResource();" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                            {{ 'CREATE_PROD_SPEC._create_res' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                    </div>
+                    
                 </div>
             }
         </div>
