ADD product offer's creation form 1st approach

--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -50,5 +50,8 @@
         @if(show_create_res_spec){
           <create-resource-spec></create-resource-spec>
         }
+        @if(show_create_offer){
+          <create-offer></create-offer>
+        }
     </div>
 </div>
