--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -14,10 +14,21 @@
 
   <div class="bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
     <div class="px-5 py-5 bg-secondary-50/95 rounded-lg">
-      <div class="h-[30px] overflow-y-hidden">
+      <div class="overflow-y-hidden">
       @for (cat of categories; track cat.id) {
-        <bae-badge class="ml-2" [category]=cat></bae-badge>
+        <bae-badge class="mr-2" [category]=cat></bae-badge>
       }
+      <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2"
+      [ngClass]="complianceLevel==1 ? 'bg-red-200 text-red-700' : complianceLevel==2 ? 'bg-yellow-200 text-yellow-700' : 'bg-green-200 text-green-700'">
+      <fa-icon [icon]="faAtom" class="mr-2" [ngClass]="complianceLevel==1 ? 'text-red-700' : complianceLevel==2 ? 'text-yellow-700' : 'text-green-700'"></fa-icon>
+          @if(complianceLevel==1){
+              Level 1
+          } @else if(complianceLevel==2) {
+              Level 2
+          } @else {
+              Level 3
+          }
+      </a>
       </div>
       <a (click)="goToProductDetails(productOff)" class="cursor-pointer">
         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{productOff?.name}}</h5>
@@ -123,6 +134,17 @@
                       @for (cat of categories; track cat.id) {
                           <bae-badge class="mr-2" [category]=cat></bae-badge>
                       }
+                      <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2"
+                      [ngClass]="complianceLevel==1 ? 'bg-red-200 text-red-700' : complianceLevel==2 ? 'bg-yellow-200 text-yellow-700' : 'bg-green-200 text-green-700'">
+                      <fa-icon [icon]="faAtom" class="mr-2" [ngClass]="complianceLevel==1 ? 'text-red-700' : complianceLevel==2 ? 'text-yellow-700' : 'text-green-700'"></fa-icon>
+                          @if(complianceLevel==1){
+                              Level 1
+                          } @else if(complianceLevel==2) {
+                              Level 2
+                          } @else {
+                              Level 3
+                          }
+                      </a>                      
                   </div>
               </div>
               <div class="overflow-hidden flex justify-center items-center bg-white dark:bg-primary-50">
@@ -134,12 +156,12 @@
         <!-- END HEADER CARD -->
 
 
-            <div class="p-4 md:p-5 grid grid-cols-3 gap-4">
+            <div class="p-4 md:p-5 grid grid-cols-2 gap-4">
               <div class="justify-start">
                   <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._prod_details' | translate }}:</h5>
                   <markdown class="min-h-19 h-19 dark:text-secondary-50 line-clamp-6" [data]="productOff?.description"></markdown>
               </div>
-              <div class="justify-start">
+              <!--<div class="justify-start">
                 <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._comp_profile' | translate }}:</h5>
                 <ul class="max-w-md space-y-1 list-disc list-inside dark:text-secondary-50">
                   @for (char of complianceProf; track char.id) {
@@ -150,7 +172,7 @@
                     }
                   }
                 </ul>
-              </div>
+              </div>-->
               <div class="justify-start">
                   <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._extra_info' | translate }}:</h5>
                     <ul class="max-w-md space-y-1 list-disc list-inside dark:text-secondary-50">
