--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -375,7 +375,7 @@
                             <span class="sr-only">Loading...</span>
                         </div>
                     } @else {
-                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mt-4">                        
+                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white mt-4 mb-4">                        
                             <table class="w-full text-sm text-left rtl:text-right text-gray-500">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-100">
                                     <tr>
@@ -561,10 +561,10 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @for (cat of categories; track cat.id) {
+                                @for (cat of categories; track cat.id;let idx = $index) {
                                     <tr class="border-b hover:bg-gray-200">
                                         <td class="px-6 py-4">
-                                            {{cat.name}}
+                                            <b>{{cat.name}}</b>
                                         </td>
                                         <td class="px-6 py-4">
                                             {{cat.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
@@ -573,6 +573,21 @@
                                             <input id="select-checkbox" [checked]="isCategorySelected(cat)" type="checkbox" value="" (click)="addCategory(cat)" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                                         </td>
                                     </tr>
+                                    @if(cat.children.length>0){
+                                        @for(child of cat.children; track child){
+                                            <tr class="border-b hover:bg-gray-200">
+                                                <td class="px-6 py-4">
+                                                    {{cat.name}} / <b>{{child.name}}</b>
+                                                </td>
+                                                <td class="px-6 py-4">
+                                                    {{child.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
+                                                </td> 
+                                                <td class="px-6 py-4">
+                                                    <input id="select-checkbox" [checked]="isCategorySelected(child)" type="checkbox" value="" (click)="addCategory(child)" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                                </td>                                          
+                                            </tr>
+                                        }
+                                    }
                                 }
                             </tbody>
                         </table>
@@ -602,13 +617,21 @@
                                 <textarea id="description" formControlName="description" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
 
                             </form>
+                            <div class="flex w-full justify-items-center justify-center ml-4 mt-4">
+                                <button type="button" (click)="freeLicenseSelected=!freeLicenseSelected" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                                    {{ 'CREATE_OFFER._cancel' | translate }}
+                                    <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">                                        
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14"/>  
+                                    </svg>                         
+                                </button>
+                            </div>
                         </div>
                     } @else {
                         <div class="flex w-full justify-items-center justify-center ml-4">
                             <button type="button" (click)="freeLicenseSelected=!freeLicenseSelected" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                                 {{ 'CREATE_OFFER._create_license' | translate }}
                                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>  
                                 </svg>                         
                             </button>
                         </div>
@@ -706,7 +729,7 @@
                         @if(updatesSelected){
                             <div class="flex m-4">
                                 <div class="flex flex-row w-full ml-4">
-                                    <input type="number" pattern="[0-9]*"  #updatemetric class="block p-2.5 w-3/4 z-20 text-sm text-gray-900 bg-white rounded-l-lg rounded-s-gray-100 rounded-s-2 border-l border-gray-300 focus:ring-blue-500 focus:border-blue-500" required />
+                                    <input type="number" pattern="[0-9]*.[0-9]*"  #updatemetric class="block p-2.5 w-3/4 z-20 text-sm text-gray-900 bg-white rounded-l-lg rounded-s-gray-100 rounded-s-2 border-l border-gray-300 focus:ring-blue-500 focus:border-blue-500" required />
 
                                     <select id="type" (change)="onSLAMetricChange($event)" class="bg-white border-r border-gray-300 0text-gray-90 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-1/4 p-2.5">
                                         <option value="day">Day</option>
@@ -719,7 +742,7 @@
                         @if(responseSelected){
                             <div class="flex m-4">
                                 <div class="flex flex-row w-full ml-4">
-                                    <input type="number" pattern="[0-9]*"  #responsemetric class="block p-2.5 w-3/4 z-20 text-sm text-gray-900 bg-white rounded-l-lg rounded-s-gray-100 rounded-s-2 border-l border-gray-300 focus:ring-blue-500 focus:border-blue-500" required />
+                                    <input type="number" pattern="[0-9]*.[0-9]*"  #responsemetric class="block p-2.5 w-3/4 z-20 text-sm text-gray-900 bg-white rounded-l-lg rounded-s-gray-100 rounded-s-2 border-l border-gray-300 focus:ring-blue-500 focus:border-blue-500" required />
 
                                     <select id="type" (change)="onSLAMetricChange($event)" class="bg-white border-r border-gray-300 0text-gray-90 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-1/4 p-2.5">
                                         <option value="ms">Ms</option>
@@ -732,7 +755,7 @@
                         @if(delaySelected){
                             <div class="flex m-4">
                                 <div class="flex flex-row w-full ml-4">
-                                    <input type="number" pattern="[0-9]*" #delaymetric class="block p-2.5 w-3/4 z-20 text-sm text-gray-900 bg-white rounded-l-lg rounded-s-gray-100 rounded-s-2 border-l border-gray-300 focus:ring-blue-500 focus:border-blue-500" required />
+                                    <input type="number" pattern="[0-9]*.[0-9]*" #delaymetric class="block p-2.5 w-3/4 z-20 text-sm text-gray-900 bg-white rounded-l-lg rounded-s-gray-100 rounded-s-2 border-l border-gray-300 focus:ring-blue-500 focus:border-blue-500" required />
 
                                     <select id="type" (change)="onSLAMetricChange($event)" class="bg-white border-r border-gray-300 0text-gray-90 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-1/4 p-2.5">
                                         <option value="ms">Ms</option>
@@ -857,7 +880,7 @@
                                     class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                 <label class="font-bold text-lg">{{ 'CREATE_OFFER._price' | translate }}</label>
                                 <div class="flex flex-row w-full">
-                                    <input type="number" pattern="[0-9]*" formControlName="price"
+                                    <input type="number" pattern="[0-9]*.[0-9]*" formControlName="price"
                                     [ngClass]="priceForm.get('price')?.invalid == true && priceForm.value.price!='' ? 'border-red-600' : 'border-gray-300'"
                                     class="bg-gray-50 border-l border-gray-300 text-gray-900 text-sm rounded-l-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"/>
     
@@ -1012,7 +1035,7 @@
                                     </select>
                                     <div>
                                         <label class="font-bold text-lg">{{ 'CREATE_OFFER._price_alter' | translate }}</label>
-                                        <input formControlName="price" type="number" pattern="[0-9]*"
+                                        <input formControlName="price" type="number" pattern="[0-9]*.[0-9]*" step="0.1"
                                         [ngClass]="priceAlterForm.get('price')?.invalid == true && priceAlterForm.value.price!='' ? 'border-red-600' : 'border-gray-300'"
                                         class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                                     </div>
@@ -1051,7 +1074,7 @@
                                     <div>
                                         <label class="font-bold text-lg">{{ 'CREATE_OFFER._enter_value' | translate }}</label>
                                         <div class="flex flex-row w-full">
-                                            <input formControlName="price" type="number" pattern="[0-9]*"
+                                            <input formControlName="price" type="number" pattern="[0-9]*.[0-9]*" step="0.1"
                                             [ngClass]="priceAlterForm.get('price')?.invalid == true && priceAlterForm.value.price!='' ? 'border-red-600' : 'border-gray-300'"
                                             class="bg-gray-50 border-l border-gray-300 text-gray-900 text-sm rounded-l-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"/>
             
@@ -1072,7 +1095,7 @@
                                                 <option value="GT">(GT) Greater than</option>
                                                 <option value="GT">(GE) Greater than or equal</option>                  
                                             </select>
-                                            <input type="number" pattern="[0-9]*"
+                                            <input type="number" pattern="[0-9]*.[0-9]*" step="0.1"
                                             [ngClass]="priceAlterForm.get('condition')?.invalid == true && priceAlterForm.value.condition!='' ? 'border-red-600' : 'border-gray-300'"
                                             class="bg-gray-50 border-r border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"/>
                                         </div>
