FIX orders filters

--- a/src/app/pages/seller-offerings/offerings/seller-offer/seller-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/seller-offer.component.html
@@ -83,7 +83,7 @@
                       class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
       
                   <label for="obsolete" class="ml-2 text-sm font-medium text-gray-900">
-                    {{ 'OFFERINGS._obsoleet' | translate }}
+                    {{ 'OFFERINGS._obsolete' | translate }}
                   </label>
                 </li>
             </ul>
