ADD product spec update form 1st approach

--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -53,5 +53,8 @@
         @if(show_create_offer){
           <create-offer></create-offer>
         }
+        @if(show_update_prod_spec){
+          <update-product-spec [prod]="prod_to_update"></update-product-spec>
+        }
     </div>
 </div>
