--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -27,7 +27,7 @@
 
 
     <div class="bg-secondary-50 dark:bg-white mt-4 p-8 rounded-lg">
-        <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_PROD_SPEC._new' | translate }}</h2>
+        <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_PROD_SPEC._update_prod' | translate }}</h2>
         <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
         <div class="grid grid-cols-20/80">
             <div class="flex flex-col mr-4">
@@ -298,7 +298,7 @@
                                     <div class="tooltip-arrow" data-popper-arrow></div>
                                 </div>
                             </div>
-                            <div class="px-4 py-2 bg-white rounded-b-lg">
+                            <div class="px-4 py-2 bg-white rounded-lg p-4">
                                 <label for="editor" class="sr-only">Publish post</label>
                                 @if(showPreview){
                                         <markdown [data]="description"></markdown>
@@ -1101,6 +1101,9 @@
                                             <th scope="col" class="px-6 py-3">
                                                 {{ 'UPDATE_PROD_SPEC._last_update' | translate }}
                                             </th>
+                                            <th scope="col" class="px-6 py-3">
+                                                Actions
+                                            </th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1125,6 +1128,13 @@
                                                 </td>
                                                 <td class="px-6 py-4">
                                                     {{rel.productSpec.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
+                                                </td>
+                                                <td class="px-6 py-4">
+                                                    <button (click)="deleteRel(rel)" class="font-bold text-white bg-red-500 rounded-3xl">
+                                                        <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/>
+                                                        </svg>                                  
+                                                    </button>    
                                                 </td>
                                             </tr>
                                         }
@@ -1277,8 +1287,8 @@
                         </div>
 
                         @if(productSpecToUpdate?.description !=''){
-                            <div class="py-2 bg-white rounded-b-lg">
-                                <label class="font-bold text-lg">{{ 'UPDATE_PROD_SPEC._product_description' | translate }}</label>
+                            <label class="font-bold text-lg">{{ 'UPDATE_PROD_SPEC._product_description' | translate }}</label>
+                            <div class="px-4 py-2 bg-white rounded-lg p-4">                                
                                 <markdown [data]="productSpecToUpdate?.description"></markdown>
                             </div>
                         }
@@ -1452,6 +1462,7 @@
                         }
 
                         @if(prodRelationships.length>0){
+                            <label class="font-bold text-lg">{{ 'UPDATE_PROD_SPEC._relationships' | translate }}</label>
                             <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
                                 <table class="w-full text-sm text-left rtl:text-right text-gray-500">
                                     <thead class="text-xs text-gray-700 uppercase bg-gray-100">
