--- a/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
@@ -405,10 +405,12 @@
                         }
                     </div>
 
-                    <div class="py-2 bg-white rounded-b-lg">
+                    @if(resourceToCreate?.description !=''){
                         <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._product_description' | translate }}</label>
-                        <markdown [data]="resourceToCreate?.description"></markdown>
-                    </div>
+                        <div class="px-4 py-2 bg-white rounded-lg p-4 mb-2">
+                            <markdown [data]="resourceToCreate?.description"></markdown>
+                        </div>
+                    }
                     
                     @if(prodChars.length>0){
                         <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._chars' | translate }}</label>
