--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/update-service-spec/update-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/update-service-spec/update-service-spec.component.html
@@ -26,7 +26,7 @@
   <!-- End Breadcrumb -->
 
   <div class="bg-secondary-50 dark:bg-white mt-4 p-8 rounded-lg">
-    <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_SERV_SPEC._new' | translate }}</h2>
+    <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_SERV_SPEC._update_serv' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
     <div class="grid grid-cols-20/80">
         <div class="flex flex-col mr-4">
@@ -476,11 +476,13 @@
                             <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{serviceToUpdate?.lifecycleStatus}}</span>
                         }
                     </div>
-
-                    <div class="py-2 bg-white rounded-b-lg">
+                    
+                    @if(serviceToUpdate?.description !=''){
                         <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._product_description' | translate }}</label>
-                        <markdown [data]="serviceToUpdate?.description"></markdown>
-                    </div>
+                        <div class="px-4 py-2 bg-white rounded-lg p-4 mb-2"> 
+                            <markdown [data]="serviceToUpdate?.description"></markdown>
+                        </div>
+                    }
                     
                     @if(prodChars.length>0){
                         <label class="font-bold text-lg">{{ 'CREATE_PROD_SPEC._chars' | translate }}</label>
